syntax = "proto3";

// option java_package = "com.example.alert";
option java_outer_classname = "AlertServiceProto";

package sentimentanalyzer;

message AlertRequest {
  string ticket_id = 1;
  string urgency = 2; // e.g., "critical", "medium", "low"
  string sentiment = 3;
  string message = 4;
  string user_id = 5;
  string api_key = 6;
}

message AlertResponse {
  string status = 1;     // e.g., "sent", "failed"
  string timestamp = 2;  // e.g., ISO-8601 format
}

service AlertService {
  rpc AlertChannel (stream AlertRequest) returns (stream AlertResponse);
}

